# dumbfs

./: .gitignore  Cargo.toml  Makefile  readme.md
src/: disk.rs  dump_file_attr.rs  file_node.rs  fs.rs  main.rs  test.rs  util.rs
src/disk/: dump.rs  mod.rs
src/file/: dump_file_attr.rs  mod.rs
src/file_meta/: dump_file_attr.rs  mod.rs
src/fs/: meta.rs  mod.rs
