[package]
name = "dumbfs"
version = "0.1.0"
authors = ["longfangsong"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = {git = "https://github.com/zargony/fuse-rs.git"}
libc = "0.2.67"
log = "0.4.0"
env_logger = "0.7.1"
nix = "0.17.0"
bincode = "1.2.1"
serde = { version = "1.0.104", features = ["derive"]}